--- a/projects.html
+++ b/projects.html
@@ -5,34 +5,53 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Jack Clegg-Skills</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
-  <header>
-    <a id="offpage" href="#maincontent">Skip to main content</a>
-    <nav>
-      <ul class="main_nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="experiences.html">Experiences</a></li>
-        <li><a class='current' href="projects.html">Skills</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
-      </ul>
-    </nav>
-  </header>
   <body>
+    <header>
+      <a id="offpage" href="#maincontent">Skip to main content</a>
+      <nav>
+        <ul class="main_nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experiences.html">Experiences</a></li>
+          <li><a class='current' href="projects.html">Skills</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
     <main id='maincontent'>
-    <h1>Skills</h1>
-    <ul>
-      <li>Python (Pandas, pySpark, Flask)</li>
-      <li>C++</li>
-      <li>Qlikview</li>
-      <li>Google Analytics</li>
-      <li>Microsoft Suite</li>
-      <li>TensorFlow</li>
-      <li>JIRA</li>
-      <li>Business Objects</li>
-      <li>Spanish</li>
-    </ul>
+      <h1>Skills</h1>
+      <p>C++</p>
+      <p>I have taken 3 semesters of coursework in our EECS department to learn C++. I have extensive knowledge of the STL and other computer science expertise like machine learning, sorting algorithms, BFS/DFS, TSP optimizations, linked lists, BSTs, recrusion, hashing, and dynamic programming.</p>
+      <i class="fas fa-laptop"></i>
+      <p>Python (Pandas, pySpark, Flask)</p>
+      <i class="fab fa-python"></i>
+      <p>I have taken 4 semesters of Python coursework in our UMSI school. I have touched each aspect of the data analysis pipeline from data gathering, cleansing, validation, analyzation, and visualization. We have worked with Pandas DataFrames, big data in pySpark, and even developed a small app with Flask. </p>
+      <p>Qlikview</p>
+      <i class="fas fa-chart-line"></i>
+      <p> In one of my internships, I worked closely with analyzing data through Qlikview and developing visualizations for use on Qlikview. I have learned how to properly use Qlikview to present the data you are looking for, as well as the proper way to wireframe these dashboards for business use.</p>
+      <p>Google Analytics</p>
+      <i class="fas fa-chart-pie"></i>
+      <p> In one of my internhips, I worked on developing our Google Analytics dashboards for use with our social media services and website. I have hand-crafted reports using data gathered using Google Analytics and made business recommendations based off my findings. </p>
+      <p>Microsoft Suite</p>
+      <i class="fab fa-windows"></i>
+      <p> I have done all kinds of work across the Microsoft Suite, most recently working on developing my Excel skills to validate data. This used Analysis queries to our back-end database to validate data on our Qlikview front end. Familiar with formulas like VLOOKUP. </p>
+      <p>TensorFlow</p>
+      <i class="fas fa-hdd"></i>
+      <p> IN PROGRESS...In my capstone project at the University of Michigan, I got paired with a group working for a start-up on further developing their CNN in TensorFlow to increase its accuracy and time to run. Currently running a ResNetV3, but looking at other options.</p>
+      <p>JIRA</p>
+      <i class="fas fa-project-diagram"></i>
+      <p> In one of my internships, I worked closely with JIRA to track our project's progress and report any bugs that we caught along the way. Learned to assign tasks, apply comments, mark updates, and maneuever the platform. </p>
+      <p>Business Objects</p>
+      <i class="fas fa-briefcase"></i>
+      <p> In one of my internships, I worked closely with Business Objects as we were migrating our database to the Rackspace cloud. I was tasked with validating the data from our old BOBJ server to our new and creating new reporting instances.</p>
+      <p>Spanish</p>
+      <i class="fas fa-globe"></i>
+      <p> I have successfully completed 5 semesters of spanish education here at the University of Michigan, and I believe I have proficient (not business) capabilities in speaking, reading, and writing Spanish. </p>
+    </main>
+    <footer>
+      <p>&copy; Jack Clegg - 2019 (work in progress - last updated 1/28/2019)</p>
+    </footer>
   </body>
-  <footer>
-    <p>&copy Jack Clegg - 2019 (work in progress - last updated 1/28/2019)</p>
-  </footer>
 </html>
