added style, axe check

--- a/experiences.html
+++ b/experiences.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Indie+Flower">
   <title>Jack Clegg-Experiences</title>
 </head>
 <body>
@@ -21,37 +22,62 @@
   </nav>
   <main id='maincontent'>
   <h1>Experiences</h1>
-  <div class='experiences'>
-    <div>
-      <h1>Groupon</h1>
-        <p>Incoming Business Operations Analyst for Summer 2019 in Chicago, Illinois</p>
+  <span class='experiences'>
+    <div class='experiences_left'>
+      <div>
+        <h1>Groupon</h1>
+          <p>Incoming Business Operations Analyst for Summer 2019 in Chicago, Illinois</p>
+      </div>
+      <div>
+        <img src='imgs/groupon.jpg' alt='groupon logo'>
+      </div>
     </div>
-    <div>
-      <h1>WOLV-TV</h1>
-          <p>Managing communications with 4 shows, 12 producers, and 50+ crew members to ensure quality content for station</p>
-          <p>Networking with Sports Information Directors to acquire press credentials and contact with players for distribution</p>
-          <p>Producer for Alley-Oop, lead communication with crews, creative direction for show, and various studio trainings</p>
+    <div class='experiences_right'>
+      <div>
+        <img src='imgs/wolvtv_logo.jpg' alt='wolvtv logo'>
+      </div>
+      <div>
+        <h1>WOLV-TV</h1>
+            <p>Managing communications with 4 shows, 12 producers, and 50+ crew members to ensure quality content for station</p>
+            <p>Networking with Sports Information Directors to acquire press credentials and contact with players for distribution</p>
+            <p>Producer for Alley-Oop, lead communication with crews, creative direction for show, and various studio trainings</p>
+      </div>
     </div>
-    <div>
-      <h1>J.Crew Group</h1>
-          <p>Worked with cross-functional business partners in store operations team to assess requirements in order to migrate and consolidate various store reports into Qlikview dashboards to provide easier access to real-time data</p>
-          <p>Performed and analyzed user testing in regards to regional, district, and store-level managers to perform UI enhances</p>
-          <p>Managed data validation processes, utilizing Microsoft Excel Analysis queries through our BW data warehouse</p>
-          <p>Managed creation of documentation for new reporting suite, creating intuitive job aids to ease adoption</p>
+    <div class='experiences_left'>
+        <div>
+          <h1>J.Crew Group</h1>
+              <p>Worked with cross-functional business partners in store operations team to assess requirements in order to migrate and consolidate various store reports into Qlikview dashboards to provide easier access to real-time data</p>
+              <p>Performed and analyzed user testing in regards to regional, district, and store-level managers to perform UI enhances</p>
+              <p>Managed data validation processes, utilizing Microsoft Excel Analysis queries through our BW data warehouse</p>
+              <p>Managed creation of documentation for new reporting suite, creating intuitive job aids to ease adoption</p>
+        </div>
+        <div>
+          <img src='imgs/jcrew.png' alt='jcrew logo'>
+        </div>
+      </div>
+    <div class='experiences_right'>
+      <div>
+        <img src='imgs/umsi_logo.jpeg' alt='umsi logo'>
+      </div>
+      <div>
+        <h1>Teacher's Assistant</h1>
+            <p>Teaching and mentoring a total of 250 students in the School of Information introductory coding course SI 106 – Programming, Information, and People</p>
+            <p>Instructing 50 students in discussion sections under direction of Professor and/or Graduate Student Instructor</p>
+      </div>
     </div>
-    <div>
-      <h1>Teacher's Assistant</h1>
-          <p>Teaching and mentoring a total of 250 students in the School of Information introductory coding course SI 106 – Programming, Information, and People</p>
-          <p>Instructing 50 students in discussion sections under direction of Professor and/or Graduate Student Instructor</p>
+    <div class='experiences_left'>
+      <div>
+        <h1>Ballparks of America</h1>
+          <p>Managed company social media accounts including Facebook, Twitter, and Instagram, leading to a 13%, 23%, and 34% growth in followers respectively</p>
+          <p>Managed official corporate website and all edits and updates through WordPress</p>
+          <p>Crafted and implemented a full social media plan to increase brand awareness and website traffic during Summer ‘17</p>
+          <p>Created weekly analytics reports for social media/web traffic to guide offseason marketing plan with Google Analytics</p>
+      </div>
+      <div>
+        <img src='imgs/boa_logo.png' alt='ballparks of america logo'>
+      </div>
     </div>
-    <div>
-      <h1>Ballparks of America</h1>
-        <p>Managed company social media accounts including Facebook, Twitter, and Instagram, leading to a 13%, 23%, and 34% growth in followers respectively</p>
-        <p>Managed official corporate website and all edits and updates through WordPress</p>
-        <p>Crafted and implemented a full social media plan to increase brand awareness and website traffic during Summer ‘17</p>
-        <p>Created weekly analytics reports for social media/web traffic to guide offseason marketing plan with Google Analytics</p>
-    </div>
-  </div>
+  </span>
   </main>
   <footer>
     <p>&copy; Jack Clegg - 2019 (work in progress - last updated 1/28/2019)</p>
