--- a/gallery.html
+++ b/gallery.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="css/html5reset.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Jack Clegg-Experiences</title>
-</head>
-<body>
-  <header>
-    <a id="offpage" href="#maincontent">Skip to main content</a>
-  </header>
-  <nav>
-    <ul class="main_nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="experiences.html">Experiences</a></li>
-      <li><a href="projects.html">Skills</a></li>
-      <li><a class='current' href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact Me</a></li>
-    </ul>
-  </nav>
-  <main id='maincontent'>
-    <div class='gallery'>
-      <img src='imgs/wolv_court.jpg' alt="Clegg on court" height=150>
-      <img src='imgs/wolv_group.jpg' alt = 'WOLV team in studio' height=150>
-      <img src='imgs/wolv_sendoff.jpg' alt='WOLV sends umich off to March Madness' height=150>
-      <img src='imgs/wolv_trophy.jpg' alt='WOLV winds Show of the Year 2018' height=150>
-      <img src='imgs/jcrew_1.png' alt='JCrew interns' height=150>
-      <img src='imgs/personal_pic.jpg' alt='JCrew interns2' height=150>
-      <img src='imgs/outdoors_1.jpg' alt='Going outside!' height=150>
-      <img src='imgs/outdoors_2.jpg' alt="I go outside sometimes!" height=150>
-      <img src='imgs/outdoors_3.jpg' alt='I am serious! I Go outside!' height=150>
-    </div>
-  </main>
-  <footer>
-    <p>&copy; Jack Clegg - 2019 (work in progress - last updated 1/28/2019)</p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Indie+Flower">
+    <title>Jack Clegg-Experiences</title>
+  </head>
+  <body>
+    <header>
+      <a id="offpage" href="#maincontent">Skip to main content</a>
+    </header>
+    <nav>
+      <ul class="main_nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="experiences.html">Experiences</a></li>
+        <li><a href="projects.html">Skills</a></li>
+        <li><a class='current' href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+      </ul>
+    </nav>
+    <main id='maincontent'>
+      <div class='gallery'>
+        <img src='imgs/wolv_court.jpg' alt="Clegg on court" height=150>
+        <img src='imgs/wolv_group.jpg' alt = 'WOLV team in studio' height=150>
+        <img src='imgs/wolv_sendoff.jpg' alt='WOLV sends umich off to March Madness' height=150>
+        <img src='imgs/wolv_trophy.jpg' alt='WOLV winds Show of the Year 2018' height=150>
+        <img src='imgs/jcrew_1.png' alt='JCrew interns' height=150>
+        <img src='imgs/personal_pic.jpg' alt='JCrew interns2' height=150>
+        <img src='imgs/outdoors_1.jpg' alt='Going outside!' height=150>
+        <img src='imgs/outdoors_2.jpg' alt="I go outside sometimes!" height=150>
+        <img src='imgs/outdoors_3.jpg' alt='I am serious! I Go outside!' height=150>
+      </div>
+    </main>
+    <footer>
+      <p>&copy; Jack Clegg - 2019 (work in progress - last updated 1/28/2019)</p>
+    </footer>
+  </body>
 </html>
