--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Indie+Flower">
     <title>Jack Clegg</title>
   </head>
-  <body>
+  <body class='bg'>
     <div class='home_container'>
       <div class='box1_logo'>
         <img src='imgs/jc.png' alt='jc logo'>
