mobile dev improvements

--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,7 @@
       </ul>
     </nav>
     <main id='maincontent'>
+      <h1>Gallery of Times</h1>
       <div class='gallery'>
         <img src='imgs/wolv_court.jpg' alt="Clegg on court" height=150>
         <img src='imgs/wolv_group.jpg' alt = 'WOLV team in studio' height=150>
