--- a/experiences.html
+++ b/experiences.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Indie+Flower">
@@ -10,16 +11,16 @@
 <body>
   <header>
     <a id="offpage" href="#maincontent">Skip to main content</a>
+    <nav>
+      <ul class="main_nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a class='current' href="experiences.html">Experiences</a></li>
+        <li><a href="projects.html">Skills</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+      </ul>
+    </nav>
   </header>
-  <nav>
-    <ul class="main_nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a class='current' href="experiences.html">Experiences</a></li>
-      <li><a href="projects.html">Skills</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact Me</a></li>
-    </ul>
-  </nav>
   <main id='maincontent'>
   <h1>Experiences</h1>
   <span class='experiences'>
