--- a/experiences.html
+++ b/experiences.html
@@ -23,7 +23,7 @@
   </header>
   <main id='maincontent'>
   <h1>Experiences</h1>
-  <span class='experiences'>
+  <div class='experiences'>
     <div class='experiences_left'>
       <div>
         <h1>Groupon</h1>
@@ -78,7 +78,7 @@
         <img src='imgs/boa_logo.png' alt='ballparks of america logo'>
       </div>
     </div>
-  </span>
+  </div>
   </main>
   <footer>
     <p>&copy; Jack Clegg - 2019 (work in progress - last updated 1/28/2019)</p>
