--- a/java_canvas/canvas.html
+++ b/java_canvas/canvas.html
@@ -15,7 +15,6 @@
 			var radius = 10;
 			var color = 'red';
 			window.addEventListener('keydown', function (e) {
-				console.log(e.keyCode);
 				if (e.keyCode == 66) {
 					color = 'blue';
 				}
@@ -38,8 +37,6 @@
 					}
 				}
 				else if (e.keyCode == 32) {
-					console.log("Space bar pressed");
-					console.log(e.keyCode);
 					clearCanvas(ctx, canvas.width, canvas.height);
 				}
 			})
@@ -53,7 +50,16 @@
 				mouse_y = e.touches[0].screenY;
 				drawArc(ctx, mouse_x, mouse_y, radius, color);
 			})
-			window.addEventListener('resize', function(e) {
+			// window.addEventListener('resize', function(e) {
+			// 	alert("resize triggered");
+			// 	var new_w = window.innerWidth;
+			// 	var new_h = window.innerHeight;
+			// 	canvas.width = new_w * .8;
+			// 	canvas.height = new_h * .8;
+			// 	clearCanvas(ctx, canvas.width, canvas.height);
+			// })
+			window.addEventListener('orientationchange', function(e) {
+				alert("orientationchange triggered");
 				var new_w = window.innerWidth;
 				var new_h = window.innerHeight;
 				canvas.width = new_w * .8;
@@ -83,7 +89,7 @@
 </head>
 <body onload="startCanvas();">
 	<main>
-		<canvas id="drawCanvas"></canvas>
+		<canvas id="drawCanvas"></canvas><br>
 		<input type="color" id="uniqueColor" tabindex="-1">Pick Drawing Color</input>
 	</main>
 </body>
