--- a/java_canvas/canvas.html
+++ b/java_canvas/canvas.html
@@ -91,6 +91,7 @@
 	<main>
 		<canvas id="drawCanvas"></canvas><br>
 		<input type="color" id="uniqueColor" tabindex="-1">Pick Drawing Color</input>
+		<p>version 2.1</p>
 	</main>
 </body>
 </html>
