--- a/java_canvas/canvas.html
+++ b/java_canvas/canvas.html
@@ -59,12 +59,12 @@
 			// 	clearCanvas(ctx, canvas.width, canvas.height);
 			// })
 			window.addEventListener('orientationchange', function(e) {
-				alert("orientationchange triggered");
-				var new_w = window.innerWidth;
-				var new_h = window.innerHeight;
-				canvas.width = new_w * .8;
-				canvas.height = new_h * .8;
-				clearCanvas(ctx, canvas.width, canvas.height);
+				console.log('orientationchange triggered');
+				console.log('old w: ' + canvas.width + ', old h: ' + canvas.height);
+				var temp = canvas.width;
+				canvas.width = canvas.height;
+				canvas.height = temp;
+				console.log('new w: ' + canvas.width + ', new h: ' + canvas.height);
 			})
 			var color_picker = document.getElementById("uniqueColor");
 			color_picker.addEventListener("change", function (e) {
@@ -91,7 +91,7 @@
 	<main>
 		<canvas id="drawCanvas"></canvas><br>
 		<input type="color" id="uniqueColor" tabindex="-1">Pick Drawing Color</input>
-		<p>version 2.1</p>
+		<p>version 2.2</p>
 	</main>
 </body>
 </html>
