--- a/java_canvas/canvas.html
+++ b/java_canvas/canvas.html
@@ -58,13 +58,15 @@
 			// 	canvas.height = new_h * .8;
 			// 	clearCanvas(ctx, canvas.width, canvas.height);
 			// })
+			console.log("curr w: " + window.innerWidth + ", curr h: " + window.innerHeight)
 			window.addEventListener('orientationchange', function(e) {
-				console.log('orientationchange triggered');
-				console.log('old w: ' + canvas.width + ', old h: ' + canvas.height);
-				var temp = canvas.width;
-				canvas.width = canvas.height;
-				canvas.height = temp;
-				console.log('new w: ' + canvas.width + ', new h: ' + canvas.height);
+				alert("orientation change");
+				console.log("curr w: " + window.innerWidth + ", curr h: " + window.innerHeight);
+				var new_w = window.innerWidth;
+				var new_h = window.innerHeight;
+				canvas.width = new_w * .8;
+				canvas.height = new_h * .8;
+				clearCanvas(ctx, canvas.width, canvas.height)
 			})
 			var color_picker = document.getElementById("uniqueColor");
 			color_picker.addEventListener("change", function (e) {
@@ -91,7 +93,7 @@
 	<main>
 		<canvas id="drawCanvas"></canvas><br>
 		<input type="color" id="uniqueColor" tabindex="-1">Pick Drawing Color</input>
-		<p>version 2.2</p>
+		<p>version 2.3</p>
 	</main>
 </body>
 </html>
