--- a/java_canvas/canvas.html
+++ b/java_canvas/canvas.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Java Drawing Canvas</title>
 	<script type="text/javascript">
 		function startCanvas() {
