visual fixes (50pts)

--- a/final_proj/projects.html
+++ b/final_proj/projects.html
@@ -17,8 +17,8 @@
         <nav>
           <ul class="main_nav">
             <li><a href="index.html">Home</a></li>
-            <li><a class = 'current' href="experiences.html">Experiences</a></li>
-            <li><a href="projects.html">Skills</a></li>
+            <li><a href="experiences.html">Experiences</a></li>
+            <li><a class = 'current' href="projects.html">Skills</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
