--- a/final_proj/contact.html
+++ b/final_proj/contact.html
@@ -16,10 +16,10 @@
         <nav>
           <ul class="main_nav">
             <li><a href="index.html">Home</a></li>
-            <li><a class = 'current' href="experiences.html">Experiences</a></li>
+            <li><a href="experiences.html">Experiences</a></li>
             <li><a href="projects.html">Skills</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
+            <li><a class = 'current' href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div>
