--- a/final_proj/contact.html
+++ b/final_proj/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Playfair+Display" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <title>Jack Clegg-Contact</title>
   </head>
   <body>
@@ -15,17 +15,23 @@
       <div id="sticky_nav">
         <nav>
           <ul class="main_nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="experiences.html">Experiences</a></li>
-            <li><a href="projects.html">Skills</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a class = 'current' href="contact.html">Contact Me</a></li>
+            <li>
+              <a href="javascript:void(0);" class="icon" onclick="changeMenu()">
+                <i class="fas fa-bars"></i>
+              </a>
+            </li>
+            <li class='alive hidden'><a href="index.html">Home</a></li>
+            <li class='alive hidden'><a href="experiences.html">Experiences</a></li>
+            <li class='alive hidden'><a href="projects.html">Skills</a></li>
+            <li class='alive hidden'><a href="gallery.html">Gallery</a></li>
+            <li class='alive hidden'><a class='current' href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main id='maincontent'>
-    <h1>Please connect with me! If you like what you see, have questions about my experiences, are looking for advice, or simply just want to chat, please contact me below! While I have already accepted an internship offer for Summer 2019, it is always important to expand your network. I will be graduating in December of 2019 and look forward to pursuing a full-time position immediately after graduation. Reach out!</h1>
+    <h1>Please connect with me!</h1>
+    <p> If you like what you see, have questions about my experiences, are looking for advice, or simply just want to chat, please contact me below! While I have already accepted an internship offer for Summer 2019, it is always important to expand your network. I will be graduating in December of 2019 and look forward to pursuing a full-time position immediately after graduation. Reach out!</p>
     <p>Contact</p>
     <p>Cell phone: 616-540-5960</p>
     <p>Current Address: 808 Packard, Ann Arbor, MI, 48104</p>
