--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -17,6 +17,7 @@
           <ul class="main_nav">
             <li>
               <a href="javascript:void(0);" class="icon" onclick="changeMenu()">
+                Expand Menu
                 <i class="fas fa-bars"></i>
               </a>
             </li>
@@ -102,7 +103,10 @@
         </div>
       </div>
       <div class="player">
-        <video class="player-video" src="../final_proj/imgs/YUNC0010.mp4"></video>
+        <video class="player-video" src="../final_proj/imgs/Roadtrip '15 FINAL.mp4">
+          <track src="../final_proj/docs/video_mock_captions.vtt" kind="captions" label="english">
+          <track src="../final_proj/docs/video_mock_captions.vtt" kind="descriptions" label="english">
+        </video>
 
         <div class="player-controls">
 
@@ -117,9 +121,10 @@
           </div>
 
           <div class="sliders">
-          <input type="range" name="volume" class="player-slider" min="0" max="1" step="0.05" value="1">
-
-          <input type="range" name="playbackRate" class="player-slider" min="0.5" max="2" step="0.1" value="1">
+            <label for="volume" class="hidden-label">Volume slide</label>
+            <input type="range" name="volume" class="player-slider" min="0" max="1" step="0.05" value="1">
+            <label for="playbackRate" class="hidden-label">Player slide</label>
+            <input type="range" name="playbackRate" class="player-slider" min="0.5" max="2" step="0.1" value="1">
           </div>
 
           <button data-skip="-10" class="player-btn">« 10s</button>
@@ -130,7 +135,6 @@
       </div>
     </main>
     <footer>
-      <p>&copy; Jack Clegg - 2019 (work in progress - last updated 1/28/2019)</p>
     </footer>
   <script  src='js/script.js'></script>
   </body>
