--- a/final_proj/gallery.html
+++ b/final_proj/gallery.html
@@ -17,6 +17,7 @@
           <ul class="main_nav">
             <li>
               <a href="javascript:void(0);" class="icon" onclick="changeMenu()">
+                Expand Menu
                 <i class="fas fa-bars"></i>
               </a>
             </li>
