--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -103,7 +103,7 @@
         </div>
       </div>
       <div class="player">
-        <video class="player-video" src="../final_proj/imgs/Roadtrip '15 FINAL.mp4">
+        <video  playsinline="true" autoplay="" class="player-video" src="../final_proj/imgs/Roadtrip '15 FINAL.mp4">
           <track src="../final_proj/docs/video_mock_captions.vtt" kind="captions" label="english">
           <track src="../final_proj/docs/video_mock_captions.vtt" kind="descriptions" label="english">
         </video>
