--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -103,9 +103,9 @@
         </div>
       </div>
       <div class="player">
-        <video  preload="none" class="player-video" src="../final_proj/imgs/Roadtrip '15 FINAL.mp4">
-          <track src="../final_proj/docs/video_mock_captions.vtt" kind="captions" label="english">
-          <track src="../final_proj/docs/video_mock_captions.vtt" kind="descriptions" label="english">
+        <video  preload="none" class="player-video" src="imgs/Roadtrip '15 FINAL.mp4">
+          <track src="docs/video_mock_captions.vtt" kind="captions" label="english">
+          <track src="docs/video_mock_captions.vtt" kind="descriptions" label="english">
         </video>
 
         <div class="player-controls">
