--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -103,7 +103,7 @@
         </div>
       </div>
       <div class="player">
-        <video  preload="none" class="player-video" src="imgs/Roadtrip '15 FINAL.mp4">
+        <video  preload="none" class="player-video" src="imgs/Roadtrip Instagram.mp4">
           <track src="docs/video_mock_captions.vtt" kind="captions" label="english">
           <track src="docs/video_mock_captions.vtt" kind="descriptions" label="english">
         </video>
