--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <title>Jack Clegg</title>
   </head>
@@ -103,7 +104,7 @@
         </div>
       </div>
       <div class="player">
-        <video  preload="none" class="player-video" src="imgs/Roadtrip Instagram.mp4">
+        <video  class="player-video" src="imgs/Roadtrip_Instagram.mp4">
           <track src="docs/video_mock_captions.vtt" kind="captions" label="english">
           <track src="docs/video_mock_captions.vtt" kind="descriptions" label="english">
         </video>
